tests/num-record-04/out.txt
error: mismatched types: expected { 1 : int, 3 : bool }, found unit
  ┌─ err.sml:2:1
  │
2 │ val _: t = ()
  │ ^^^^^^^^^^^^^

typechecking failed
